<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:id="@+id/shme"
                android:contentDescription="@string/todo1"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_baseline_west_24"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shme"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/welcome"
                android:textColor="#2E6589"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titre"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10sp"
                android:text="@string/sing_in_to_continue"
                android:textColor="#51A4DA"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <EditText
                    android:id="@+id/gmail"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="150dp"
                    android:hint="@string/gmail"
                    android:inputType="textEmailAddress"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/gmail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/border_button2"
                    android:text="login"
                    android:textColor="#fff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="140dp"
                        android:layout_height="2dp"
                        android:background="#919191"
                        android:padding="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="or"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="140dp"
                        android:layout_height="2dp"
                        android:background="#919191" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/or"
                    android:layout_centerHorizontal="true"
                    android:text="Social Media Login"
                    android:textSize="20dp"
                    android:textColor="#51A4DA"
                    android:layout_marginTop="20dp"/>


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>